<!--
  ~ /*
  ~  * ﻿Copyright 2017 Bait Inc
  ~  * Licensed under the Apache License, Version 2.0 Jubilee 2017;
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  * Unless required by applicable law or agreed to in writing,
  ~  * software distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  *  limitations under the License.
  ~  */
  -->

<resources>
    <string name="app_name">Jubilee 2017</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone number or email address is invalid</string>
    <string name="error_invalid_password">This password is too short, try at least 5 characters </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number">phone number</string>
    <string name="by_signing_in">By signing in you accept our
        <u>Terms of Service</u> and <u>Privacy Policy</u></string>
    <string name="jubilee">Jubilee</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="menu_refresh">Refresh</string>
    <string-array name="counties">
        <item>Baringo</item>
        <item>Bomet</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Elgeyo Marakwet</item>
        <item>Embu</item>
        <item>Garissa</item>
        <item>Homa Bay</item>
        <item>Isiolo</item>
        <item>Kajiado</item>
        <item>Kakamega</item>
        <item>Kericho</item>
        <item>Kiambu</item>
        <item>Kilifi</item>
        <item>Kirinyaga</item>
        <item>Kisii</item>
        <item>Kisumu</item>
        <item>Kitui</item>
        <item>Kwale</item>
        <item>Laikipia</item>
        <item>Lamu</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Mandera</item>
        <item>Meru</item>
        <item>Migori</item>
        <item>Marsabit</item>
        <item>Mombasa</item>
        <item>Muranga</item>
        <item>Nairobi</item>
        <item>Nakuru</item>
        <item>Nandi</item>
        <item>Narok</item>
        <item>Nyamira</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Samburu</item>
        <item>Siaya</item>
        <item>Taita Taveta</item>
        <item>Tana River</item>
        <item>Tharaka Nithi</item>
        <item>Trans Nvoia</item>
        <item>Turkana</item>
        <item>Uasin Gishu</item>
        <item>Vihiga</item>
        <item>Wajir</item>
        <item>West Pokot</item>
    </string-array>
    <string name="ad_unit_one">ca-app-pub-3021111099724641/4869630418</string>
    <string name="ad_unit_two">ca-app-pub-3021111099724641/9299830011</string>
    <string name="ad_settings_id">ca-app-pub-3021111099724641/9543409612</string>
    <string name="title_activity_settings">Settings</string>
    <string name="facebook_app_id">261875374234549</string>
    <string name="fb_login_protocol_scheme">fb261875374234549</string>
    <string name="developed_by_bait_inc">Developed by Bait Inc</string>
    <string name="share">Share</string>
    <string name="phone_number_or_email">Phone number or email</string>
    <string name="password">password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="title_activity_invite">Invite Friends</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="invites">Invites</string>
    <string name="send_invite">Send Invite</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="title_activity_feed_back">New Feedback</string>
    <string name="credits">Credits</string>
    <string name="feedback">Feedback</string>
    <string name="eula">EULA</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_message_subject">Enter message subject</string>
    <string name="the_team_values_your_feedback">The team values your feedback</string>
    <string name="enter_message_content">Enter message content</string>
    <string name="update">Update</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="user">User</string>
    <string name="dots">…</string>
    <string name="more">more…</string>
    <string name="title_activity_ads"/>
    <string name="interstitial_ad_unit_id">ca-app-pub-3021111099724641/8102298414</string>
    <string name="version_name">inc.bait.jubilee</string>
</resources>
