<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * ﻿Copyright 2017 Bait Inc
  ~  * Licensed under the Apache License, Version 2.0 Jubilee 2017;
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  * Unless required by applicable law or agreed to in writing,
  ~  * software distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  *  limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_eula"
            android:icon="@drawable/ic_eula"
            android:title="@string/eula" />
        <!--

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_invite"
            android:title="@string/invite_friends" />
            -->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_credits"
            android:title="@string/credits" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_send"
            android:title="@string/feedback" />
    </group>

</menu>
