<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * ﻿Copyright 2017 Bait Inc
  ~  * Licensed under the Apache License, Version 2.0 Jubilee 2017;
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  * Unless required by applicable law or agreed to in writing,
  ~  * software distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  *  limitations under the License.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inc.bait.jubilee.ui.activity.FeedBackActivity"
    tools:showIn="@layout/activity_feed_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/the_team_values_your_feedback"
            android:textColor="@color/black_overlay"
            android:textSize="20sp" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            app:cardCornerRadius="0dp"
            app:cardUseCompatPadding="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/subject_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textColorHint="@color/colorAccent">
                <AutoCompleteTextView
                    android:id="@+id/subjectEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_message_subject"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="0dp"
            app:cardUseCompatPadding="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/colorAccent">
                <AutoCompleteTextView
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_message_content"
                    android:inputType="text"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
